--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
         }
     },
     "require": {
+        "php": ">=7.0.0",
         "symfony/console": "^4.1"
     },
     "bin": [
         "bin/myapp"
     ],
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": ">=6"
     }
 }
