--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script: composer global require kherge/box
 script:
     - phpunit
     - composer install --no-interaction --no-dev
-    - box build -v
+    - ~/.composer/bin/box build -v
 
 notifications:
     email: true
