Include version with build

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
     - phpunit
     - composer install --no-interaction --no-dev
     - box build -v
+    - sha1sum build/myapp.phar > build/myapp.phar.version
     - rm build/.gitignore
 
 deploy:
