--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require": {
         "php": "^7.1.3",
-        "symfony/console": "^4.1"
+        "symfony/console": "^4.1",
+        "padraic/phar-updater": "^1.0"
     },
     "bin": [
         "bin/myapp"
